--- a/server-side/package.json
+++ b/server-side/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "compression": "^1.7.4",
+    "config": "^3.3.1",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
